# NECDFlight2025

./: .gitignore  README.md
FAST_LIO/: package.xml
FAST_LIO/include/: highodometry.h
FAST_LIO/launch/: mapping_velodyne.launch  slam.launch
FAST_LIO/msg/: optimization.msg
src/: start.sh
src/FAST_LIO/: CMakeLists.txt  README.md
src/FAST_LIO/Log/: mat_pre.txt
src/FAST_LIO/config/: mid360.yaml
src/FAST_LIO/launch/: mapping_mid360.launch  octomap.launch
src/FAST_LIO/rviz_cfg/: loam_livox.rviz
src/FAST_LIO/src/: highFreodo.cpp  laserMapping.cpp
src/cv_pkg/: 1.txt  CMakeLists.txt  package.xml
src/cv_pkg/config/: waypoints.yaml
src/cv_pkg/launch/: qr_detector.launch
src/cv_pkg/msg/: QRResult.msg
src/cv_pkg/src/: qr_logistics_detector.cpp
src/ground_station_comm/: CMakeLists.txt  package.xml
src/ground_station_comm/config/: serial_config.yaml
src/ground_station_comm/include/ground_station_comm/: data_communication_pkg.hpp  trajectory_mapper.hpp
src/ground_station_comm/launch/: ground_station.launch
src/ground_station_comm/msg/: AnimalData.msg
src/ground_station_comm/src/: data_communication_pkg.cpp  ground_station_node.cpp  trajectory_mapper.cpp
src/px4ctrl/: CMakeLists.txt  package.xml
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/px4ctrl/scripts/: circle_flight_test.py  takeoff_land_publisher.sh
src/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  PX4CtrlParam.cpp  PX4CtrlParam.h  controller.cpp  controller.h  input.cpp  input.h  px4ctrl_node.cpp
src/px4ctrl/thrust_calibrate_scrips/: record.sh  thrust_calibrate.py
src/stm32_comm/: CMakeLists.txt  package.xml
src/stm32_comm/include/stm32_comm/: data_comm_protocol.hpp
src/stm32_comm/launch/: stm32comm.launch
src/stm32_comm/src/: data_comm_protocol.cpp  stm32_node.cpp
src/yolo11_ros/: CMakeLists.txt  README.md  package.xml
src/yolo11_ros/include/: common.h  file_utils.h  image_drawing.h  image_utils.h  postprocess.h
src/yolo11_ros/launch/: yolo11_detection.launch
src/yolo11_ros/model/: 4classgarbage.txt  train3_best.rknn
src/yolo11_ros/msg/: AnimalData.msg
src/yolo11_ros/python_script/: jpg2png.py
src/yolo11_ros/src/: main.cc  postprocess.cc  yolo11_ros_node.cpp
